test/compile-fail/resolution/pub/in-non-ancestral-crate/top.rhdl
mod a {
    pub(in crate::c) struct b {}
}
mod c {}
